firebase added as a service, init working on include, settting up pinia with it next

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "firebase": "^9.9.2",
     "roboto-fontface": "*",
     "sass": "^1.54.4",
     "vue": "^3.2.37",
